--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-  "name": "vue3-components",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@types/fabric": "^4.5.12",
-    "@vueuse/core": "^9.3.0",
-    "changedpi": "^1.0.4",
-    "element-plus": "^2.2.18",
-    "fabric": "^5.2.4",
-    "fabric-customise-controls": "^2.0.6-beta",
-    "loadash": "^1.0.0",
-    "lodash": "^4.17.21",
-    "qiankun": "^2.8.4",
-    "vite-plugin-qiankun": "^1.0.15",
-    "vue": "^3.2.37",
-    "vue-router": "4",
-    "vue3-uuid": "^1.0.0"
-  },
-  "devDependencies": {
-    "@types/node": "^18.8.5",
-    "@vitejs/plugin-vue": "^3.1.0",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.6.4",
-    "unplugin-auto-import": "^0.11.2",
-    "unplugin-vue-components": "^0.22.8",
-    "vite": "^3.1.0",
-    "vite-plugin-svg-icons": "^2.0.1",
-    "vue-tsc": "^0.40.4"
-  }
+    "name": "vue3-components",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "  vite build",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@vueuse/core": "^9.3.0",
+        "changedpi": "^1.0.4",
+        "element-plus": "^2.2.18",
+        "fabric": "^5.2.4",
+        "fabric-customise-controls": "^2.0.6-beta",
+        "loadash": "^1.0.0",
+        "lodash": "^4.17.21",
+        "qiankun": "^2.8.4",
+        "vite-plugin-qiankun": "^1.0.15",
+        "vue": "^3.2.37",
+        "vue-router": "4",
+        "vue3-uuid": "^1.0.0"
+    },
+    "devDependencies": {
+        "@types/fabric": "^4.5.12",
+        "@types/node": "^18.7.18",
+        "@vitejs/plugin-vue": "^3.1.0",
+        "autoprefixer": "^10.4.13",
+        "postcss": "^8.4.19",
+        "tailwindcss": "^3.2.4",
+        "typescript": "^4.6.4",
+        "unplugin-auto-import": "^0.11.2",
+        "unplugin-vue-components": "^0.22.8",
+        "vite": "^3.1.0",
+        "vite-plugin-svg-icons": "^2.0.1",
+        "vue-tsc": "^0.40.4"
+    }
 }
